education, plan visit pages and other fixes
education, plan visit pages and other fixes

--- a/styles/NAO.css
+++ b/styles/NAO.css
@@ -110,4 +110,15 @@
         .btn-group a.active {
         background-color: #611E20
         }
+
+        .image-and-text{
+            clear:both;
+        }
+        .image{
+            float:left;
+        }
+        .text{
+            float:left;
+        }
+        
 </style>
