aligned top menu bar items
aligned top menu bar items

--- a/styles/NAO.css
+++ b/styles/NAO.css
@@ -1,4 +1,8 @@
 <style>
+        .mainMenu {
+            padding-right: 15px; 
+            padding-top: 15px;            
+        }
         #logo {
             vertical-align: middle;
         }
