--- a/styles/NAO-Cart.css
+++ b/styles/NAO-Cart.css
@@ -57,3 +57,11 @@ body {font-family: Arial;}
     cursor: pointer;
     font-size: 17px;
 }
+
+input, textarea {
+    width:90%;
+    height:30px;
+    /* background:#efefef;
+    border:1px solid #dedede; */
+    padding:10px;
+}
